# precommit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  codestyle.sh  pyproject.toml  test.py  test_check_email.py  test_cli.py  test_cli_commands.py
precommit_hooks/: __init__.py  __main__.py  cli.py  config.py
precommit_hooks/commands/: check_branch.py  check_codestyle.py  check_email.py
src/precommit_hooks/: __init__.py  cli.py  config.py  utils.py
src/precommit_hooks/commands/: check_email.py
tests/: test.py  test_check_email.py  test_cli.py  test_cli_commands.py  test_codestyle.py
