[project]
name = "precommit-hooks"
version = "0.1.0"
description = "A collection of pre-commit hooks for code quality"
authors = [
    {name = "Nataliya Kryuchkova",email = "kryuchkova.na@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "click (>=8.2.1,<9.0.0)"
]

[project.scripts]
precommit-hooks = "precommit_hooks.cli:cli"

[project.urls]
Repository = "https://github.com/nataliya/precommit-hooks"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["precommit_hooks"]
package-dir = {"" = "src"}