[project]
name = "precommit-hooks"
version = "0.1.0"
description = "A collection of pre-commit hooks for code quality"
authors = [
    {name = "Nataliya Kryuchkova",email = "kryuchkova.na@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "click (>=8.2.1,<9.0.0)"
]
packages = [
    {include = "precommit_hooks"}
]

[project.scripts]
precommit-hooks = "precommit_hooks.cli:cli"

[project.urls]
Repository = "https://github.com/nataliya/precommit-hooks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

